added a real example for async await, and some other files too

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <title>Hisanz JS Playground</title>
-        <script src="/hisan-js-playground/closures-async-callbacks.js"></script>
+        <script src="/hisan-js-playground/callbacks-promises-async-await.js"></script>
     </head>
+    <body>
+        <button name="b1">Hello</button>
+    </body>
 
 </html>
